alignment fixed mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -1976,12 +1976,13 @@ option {
 
     .heading-mpc {
 
-        width: 145px;
+        width: 100%;
         height: 24px;
         font-size: 16px;
         margin: 16px 0px;
         padding: 0;
-        text-align: center;
+        text-align: left;
+        
 
     }
 
@@ -2050,7 +2051,7 @@ option {
         font-size: 18px !important;
         color: #040404;
 
-        margin-left: -40px;
+        margin-left: 10px;
         margin-top: 0px !important;
         width: 142px;
         height: 20px;
@@ -2086,7 +2087,7 @@ option {
         display: flex;
 
         font-size: 8px;
-        margin-left: -30x;
+        margin-left: 10px;
         margin-top: 0px !important;
         color: #777;
         font-weight: 400;
@@ -2275,7 +2276,7 @@ option {
 
     .heading-guildlines {
 
-        width: 145px;
+        width: 100%;
         height: 24px;
         font-size: 16px;
         margin: 16px 0px !important;
@@ -2412,7 +2413,7 @@ option {
 
     .heading-questions {
 
-        width: 145px;
+        width: 100%;
         height: 24px;
         font-size: 16px;
         margin: 16px 0px;
